[package]
name = "refer"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-tui = "4.0.1"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.22"
ratatui = { version = "0.26.3", features = ["macros"] }
simplelog = "0.12.2"
snailquote = "-1.3.1"

# [profile.release]
# debug=true # only for flamegraph
